I access in CSS the class .gallery and I applied display:flex, so that my movie cards are be flexible to be moved, then i put a gap between them by using gap:20px. Then I used flex-wrap:wrap to make sure when the screen reduces the cards come back to nnew line.(this is the learning of now)

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-shrink: 100px;
+    
 }
 .search-bar{
     border-radius: 30px;
@@ -26,6 +28,14 @@ header{
     font-weight: bold;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
 }
+
+.gallery{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    flex: 1 1 300px;
+}
+
 
 
 
